<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Feed Me So\'more</string>
    <string name="selectChildTitle">Select a Child</string>
    <string name="icon_settings">Settings</string>
    <string name="icon_add">Add</string>
    <string name="addChild">Add a Child</string>
    <string name="entries">Select an Entry</string>
    <string name="settings">Edit Settings</string>
    <string name="myFamily">My Family</string>
    <string name="addEntry">Add a Journal Entry</string>
    <string name="addBottle">Add Bottle Feeding</string>
    <string name="addBreast">Add Breast Feeding</string>
    <string name="addNap">Add Nap</string>
    <string name="journal">My Journal Entries</string>
    <string name="naps">Nap Tracker</string>
    <string name="takePicture">Take</string>
    <string name="pickPicture">Select</string>
    <string name="reportBug">Report a Bug</string>
    <string name="timer">Timer</string>
    <string name="startTimer">Start</string>
    <string name="stopTimer">Stop</string>
    <string name="save">Save</string>
    <string name="addDiaperHeader">Add Diaper</string>
    <string name="editDiaperHeader">Edit Diaper</string>
    <string name="diaperHeader">Diaper Tracker</string>

    <string-array name="feedingType">
        <item>Bottle Feeding</item>
        <item>Breast Feeding</item>
    </string-array>

    <string-array name="babySex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="entrySide">
        <item>Left</item>
        <item>Right</item>
    </string-array>
    <string-array name="feedingAmountOz">
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
    </string-array>
    <string-array name="feedingAmountMl">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
   </string-array>

    <!-- Diaper Screens -->
    <string name="deleteDiaperDialogTitle">Delete Diaper</string>
    <string name="deleteDiaperDialogMsg">Are you sure?</string>
    <string name="deleteDiaperDialogPositiveButton">Yes</string>
    <string name="deleteDiaperDialogNegativeButton">Cancel</string>
    <string name="deleteDiaperButtonLabel">Delete</string>
    <string name="diaperDateLabel">Date:</string>
    <string name="diaperTimeLabel">Time:</string>
    <string name="diaperTypeLabel">Type:</string>
    <string name="diaperConsistencyLabel">Consistency:</string>
    <string name="diaperColorLabel">Color:</string>
    <string name="saveDiaperButtonLabel">Save</string>
    <string name="babyButtonLabel">Baby</string>
    <string name="addDiaperLabel">Add</string>
    <string name="diaperButtonLabel">Diapers</string>
    <string-array name="diaperType">
        <item>Wet</item>
        <item>Poop</item>
    </string-array>
    <string-array name="diaperConsistency">
        <item>Not Applicable</item>
        <item>Loose</item>
        <item>Solid</item>
    </string-array>
    <string-array name="diaperColor">
        <item>Not Applicable</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Brown</item>
    </string-array>

    <!-- Journal Screen Strings -->
    <string name="entriesHeader">Entries</string>

    <!-- Settings Page Strings -->
    <string-array name="liquidMeasurements">
        <item>oz</item>
        <item>ml</item>
    </string-array>

    <string-array name="lengthMeasurements">
        <item>in</item>
        <item>cm</item>
    </string-array>

    <string-array name="weightMeasurements">
        <item>lbs</item>
        <item>kg</item>
    </string-array>

    <string-array name="temperatureMeasurements">
        <item>F</item>
        <item>C</item>
    </string-array>

    <string-array name="soundOptions">
        <item>Off</item>
        <item>On</item>
    </string-array>

    <string-array name="vibrateOptions">
        <item>Off</item>
        <item>On</item>
    </string-array>

    <!-- Export Email -->
    <string name="exportEmailSubject">Feed Me So\'more Export for </string>
    <string name="exportEmailText">Attached is your child\'s feeding history in Excel format. Enjoy!</string>
</resources>
